<resources>
    <string name="app_name">i_got_it</string>

    <string name="login">Login</string>
    <string name="pass">Password</string>
    <string name="reg">Register</string>
    <string name="log_in">LOG IN</string>
    <string name="sign_up">SIGN UP</string>

    <string name="yes">Да</string>
    <string name="decline">Нет</string>
    <string name="no">Нет</string>
    <string name="ok">Ок</string>
    <string name="main">Главная</string>

    <string name="lessons">Уроки</string>
    <string name="calendar">Календарь</string>
    <string name="remove">Удаление</string>
    <string name="scheduler">Расписание</string>
    <string name="catalogue">Каталог</string>
    <string name="profile">Профиль</string>

    <string name="user_data">Данные</string>
    <string name="settings">Настройки</string>
    <string name="about">О приложении</string>
    <string name="about_projects">О проекте</string>
    <string name="clubs">Клубы</string>
    <string name="courses">Курсы</string>
    <string name="individually">Индивидуально</string>
    <string name="text_for_individually">На занятиях я использую учебники\nи методические пособия британских\nи американских издательств, собственные\nразработки и аутентичные материалы.</string>
    <string name="individually_variable_01">1, 2 или 3 раза в неделю</string>
    <string name="individually_variable_02">1 час</string>
    <string name="individually_variable_03">Онлайн</string>
    <string name="individually_question">Выберите день, когда хотите начать учиться</string>
    <string name="about_course">О курсе</string>
    <string name="record">Запись</string>


    <string name="my_courses">Мои курсы</string>
    <string name="choose_training">Выбрать обучение</string>
    <string name="favorites_courses">Избранные курсы</string>
    <string name="you_dont_have_any_classes_yet">У вас пока нет занятий</string>
    <string name="the_next_lesson">Ближайшее занятие</string>

    <string name="registration">Регистрация</string>
    <string name="phone">Телефон</string>
    <string name="user_name">Имя пользователя</string>
    <string name="mail">Почта</string>
    <string name="password">Пароль</string>
    <string name="password_recovery">Восстановление пароля</string>
    <string name="password_reset">Сбросить пароль</string>
    <string name="entrance">Вход</string>
    <string name="exit">Выход</string>
    <string name="i_do_not_remember_password">Не помню пароль</string>
    <string name="privacy_policy">Политика конфиденциальности</string>
    <string name="consent_to_processing">Даю согласие на обработку персональных данных \nв соответствии с политикой конфиденциальности</string>

    <string name="date_and_time">дата и время</string>
    <string name="lesson"># занятиe</string>
    <string name="selected_lesson">Здесь будет выбранный урок</string>

    <string name="date_and_time_of_the_lesson">Дата и время занятия</string>

    <string name="a_1">A1</string>
    <string name="lesson_2">2 занятие</string>
    <string name="download_soft_skills">Качаю софт-скиллы</string>
    <string name="intensive_english">Интенсивный разговорный английский для начальных уровней</string>
    <string name="sign_up_for_lesson">Записывайся на уроки через\nудобное приложение</string>
    <string name="to_begin">Начать</string>

    <!--    Титулы для фрагментов-->
    <string name="authFragmentTitle">Вход</string>
    <string name="regFragmentTitle">Регистрация</string>
    <string name="restoreFragmentTitle">Восстановление пароля</string>
    <string name="profileFragmentTitle">Профиль</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="intro_1">Интро1</string>
    <string name="here_is_the_selected_lesson">Здесь выбранный урок</string>

</resources>